--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,6 @@
     }
   },
   "require": {
-    "painkill2r/inflearn-lecture-lib": "^0.0.1"
+    "painkill2r/inflearn-lecture-lib": "0.0.2"
   }
 }
